# car-sales-agent

./: .env.online  .gitignore  AGENTS.md  CLAUDE.md  README.md  main.py  pyproject.toml
agents/: __init__.py  chat_agent.py
api/: README.md  router.py
api/models/: __init__.py  llm_registry.py
api/routers/: chat_router.py
api/services/: chat_service.py
car-sales-agent/: .env.online  AGENTS.md  LLM_Factory.py  agent.py  deepagents.toml
common/: __init__.py  logger.py  schemas.py
docs/: claude_code_analysis.md  deepagents_analysis.md  replace_system_prompt.md  storage_solution.md
frontend/: app.js  index.html  styles.css
skills/explaining-car-condition/: SKILL.md
skills/explaining-car-condition/scripts/: atomic_fetch_fucs.py  car_condition_tools.py  env_config.py  logger.py  tool_common.py  utils.py
skills/explaining-car-condition/scripts/tools/: get_car_checkreport_content.py  get_car_checkreport_link.py  get_car_condition_level.py  get_car_insurance_history.py  (+2 more)
skills/explaining-car-costs/: SKILL.md  requirements.txt
skills/explaining-car-costs/references/: error_processing_rule.md
skills/explaining-car-costs/scripts/: atomic_fetch_fucs.py  atomic_fetch_price.py  car_condition_tools.py  car_cost_fetch_funcs.py  car_knowledge_base_search.py  env_config.py  get_reputation_data.py  tool_common.py
skills/explaining-car-source/: SKILL.md
skills/explaining-car-source/scripts/: atomic_fetch_fucs.py  atomic_fetch_price.py  car_condition_tools.py  car_knowledge_base_select_instruction  env_config.py  settings.py  tool_common.py  utils.py
(+14 files in other folders)
